https://bugs.webkit.org/show_bug.cgi?id=36848 <rdar://problem/7362913> Menu items appropriate only for rich-content editing can appear in plain-text contexts

Reviewed by Dan Bernstein.

* WebView/WebHTMLView.mm:
(-[WebHTMLView validRequestorForSendType:returnType:]):
Don't return self for non-string content if _canEditRichly is false.



Canonical link: https://commits.webkit.org/48100@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56806 268f45cc-cd09-0410-ab3c-d52691b4dbfc